[tool.poetry]
name = "repl_python3_beta_Discord-God-Gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
flask = "^2.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
